# compdb

./: Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
cc/: Cargo.toml  Makefile  cc  cc.py  cc.rs  cc_hook.txt  compile_commands.json  gen_compdb  gen_compdb.py  gen_compdb.rs  out  qwe.c  readme.txt
cc/src/: cxx.rs  generate.rs  lib.rs  main.rs  wrapper.rs
cc/tests/: integration_tests.rs
compdbfilter/src/: main.rs
filter/: Cargo.toml
filter/tests/: integration_tests.rs
src/: main.rs
tests/: integration_tests.rs
