[package]
name = "cc_hook"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "compdbcc"
path = "cc.rs"

[[bin]]
name = "compdbccgen"
path = "gen_compdb.rs" 